# osrm-microservice

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.builder  Dockerfile.osrm  Makefile  README.es.md  README.fr.md  README.md  docker-compose.yml  match_example_map.html  plan.md  pyproject.toml
app/: Dockerfile  config.py  main.py  pyproject.toml
app/models/: schemas.py
app/services/: graph_builder.py  osrm_client.py  vrp_service.py
docs/: API_REFERENCE.es.md  API_REFERENCE.fr.md  API_REFERENCE.md  GATEWAY_IMPLEMENTATION_PLAN.md
examples/benchmarking/: compare_tsp.py  comparison_map.html
examples/clustering/: README.md  clustering_payload.json  generate_payload.py  run_clustering_workflow.py  simple_id_example.py  simple_vrp_map.html  stress_test_payload.json
examples/routing/: map.html  match_example.py  matrix_example.py  nearest_example.py  tile_example.py  visualize_routes.py
examples/vrp/: PROPOSAL.md  stress_test_payload.json  stress_test_result.json  stress_test_vrp.py  stress_test_vrp_map.html  visualize_vrp.py  vrp_map.html
tests/: run_parity_tests.py  test_parity_baseline.py  test_phase1_features.py  test_phase2_nearest.py  test_phase3_common.py  test_phase4_tile_error.py  test_vrp.py
