[project]
name = "osrm-api-gateway"
version = "0.2.2"
description = "FastAPI gateway for OSRM routing engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "networkx>=3.2.1",
    "numpy>=1.26.0",
    "folium>=0.16.0",
    "requests>=2.31.0",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "README*.md",
    "app",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.urls]
Homepage = "https://github.com/lvalverdeb/osrm-microservice"
Repository = "https://github.com/lvalverdeb/osrm-microservice"
Documentation = "https://github.com/lvalverdeb/osrm-microservice#readme"
"Bug Tracker" = "https://github.com/lvalverdeb/osrm-microservice/issues"
