[project]
name = "osrm-api-gateway"
version = "0.1.0"
description = "FastAPI gateway for OSRM routing engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "networkx>=3.2.1",
]
